tests/fixtures/pass/box_i32.sali
use alloc.boxed.{box_new, box_ptr}

let main(): i32 = {
  let boxed = box_new(42)
  let pointer = box_ptr(boxed)
  unsafe do {
    *pointer
  }
}
