tests/fixtures/fail/raw_trap_arguments.sali
let main(): i32 = unsafe do {
  raw_trap(1)
}
